--- a/style.css
+++ b/style.css
@@ -294,13 +294,18 @@ video{
     text-align: center;
     margin: 30px 0px;
 }
-.cart img{
+.cart .img{
     width:280px;
-    max-height:250px;
+    height:250px;
     border-radius: 5px;
     box-shadow: 3px 3px 3px rgb(138, 138, 138),-3px 3px 3px rgb(138, 138, 138),3px -3px 3px rgb(138, 138, 138);
     opacity: 1;
     cursor: pointer;
+}
+.cart img{
+    width:100%;
+    height:100%;
+    object-fit:cover;
 }
 .cart{
     display: grid;
