--- a/style.css
+++ b/style.css
@@ -223,18 +223,22 @@
     margin-top: 20px;
     margin-bottom: 30px;
 }
-.categories-1 img{
+.categories-1 .img{
     width:280px;
-    max-height:250px;
+    height:250px;
     border-radius: 5px;
     box-shadow: 3px 3px 3px rgb(138, 138, 138),-3px 3px 3px rgb(138, 138, 138),3px -3px 3px rgb(138, 138, 138);
     opacity: 1;
+}
+. categories -1 img{
+    width:100%;
+    height:100%;
 }
 .categories-1{
     display: grid;
     grid-template-columns: repeat(auto-fit,minmax(200px,280px));
     justify-content:center;
-    column-gap:20px;
+    gap:20px;
     align-content: start;
 }
 .img p{
