--- a/style.css
+++ b/style.css
@@ -313,7 +313,7 @@ video{
     justify-content:center;
     column-gap:20px;
     row-gap:20px;
-    margin-bottom:30px;
+    padding-bottom:30px;
 
 }
 .women-wear h1{
