--- a/style.css
+++ b/style.css
@@ -223,12 +223,17 @@
     margin-top: 20px;
     margin-bottom: 30px;
 }
-.categories-1 img{
+.categories-1 .img{
     width:280px;
     height:250px;
     border-radius: 5px;
     box-shadow: 3px 3px 3px rgb(138, 138, 138),-3px 3px 3px rgb(138, 138, 138),3px -3px 3px rgb(138, 138, 138);
     opacity: 1;
+}
+.img img{
+    width:100%;
+    height:100%;
+    object-fit:cover;
 }
 .categories-1{
     display: grid;
