--- a/style.css
+++ b/style.css
@@ -241,6 +241,7 @@
     justify-content:center;
     column-gap:20px;
     row-gap:20px;
+    padding-bottom:40px;
 }
 .img p{
     font-family: 'poppins';
